jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: elevin//jenkins_k8s:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
           - name: http-port
             containerPort: 8080
           - name: jnlp-port
             containerPort: 50000
        volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-volume
