default-http-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace:  kube-system
spec:
  selector:
     app: default-response-app
  ports:
    -  port: 80
       targetPort: 9090
