minik-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
 rules:
 - host: ubuntu-dashboard.info
   http:
    paths:
    - path: "/dash"
      pathType: Prefix
      backend:
        service:
          name: kubernetes-dashboard
            port:
              number: 80
